--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <div class="header">
     <div class="icon-links">
       <a href="https://www.twitter.com/node_camp/" target="_blank"><i class="fa fa-twitter"></i></a>
-      <a href="https://www.facebook.com/node_camp/" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="https://www.facebook.com/Node-Camp-1147042711997175" target="_blank"><i class="fa fa-facebook"></i></a>
+      <a href="mailto:info@nodecamp.io" target="_blank"><i class="fa fa-envelope"></i></a>
+
     </div>
  
   </div>
@@ -21,12 +23,14 @@
       <img src="images/logo.svg" id="logo">
     </div>
     <p class="name">Node Camp</p>
-    <p class="date">Mid-July 2016</p>
-    <p class="venue">Midtown Manhattan</p>
-    <p class="updates">Save the date and stay tuned for exciting announcements coming in Q1 2016</p>
+    <p class="date">Sat Jul 16, 2016 2016</p>
+    <p class="venue">@ United Nations HQ</p>
+    <p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
+    <p class="updates strong">Registration and sessions proposals opening soon!</p>
+    <p class="updates strong">Please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a> if you have any questions or want to get involved.</p>
   </div>
 
-  <div id="updated">Last updated on Mar 5, 2016</div>
+  <div id="updated">Last updated on Apr 15, 2016</div>
 </body>
 
 </html>
