--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <img src="images/logo.svg" id="logo">
     </div>
     <p class="name">Node Camp</p>
-    <p class="date">Sat Jul 16, 2016 2016</p>
+    <p class="date">Sat Jul 16, 2016 </p>
     <p class="venue">@ United Nations HQ</p>
     <p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
     <p class="updates strong">Registration and sessions proposals opening soon!</p>
