--- a/index.html
+++ b/index.html
@@ -26,11 +26,65 @@
     <p class="date">Sat Jul 16, 2016 </p>
     <p class="venue">@ United Nations HQ</p>
     <p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
-    <p class="updates strong">Registration and sessions proposals opening soon!</p>
+    <p class="updates strong">Registration and sessions proposals on Mon May 2, 2016!</p>
     <p class="updates strong">Please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a> if you have any questions or want to get involved.</p>
+    <p class="updates strong">If you want to present, please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a>.</p>
   </div>
 
-  <div id="updated">Last updated on Apr 15, 2016</div>
+
+  <div id="blocks">
+	  <div id="newsletter" class="block">
+			<h4 class="block-title">Node Camp Newsletter</h4>    
+
+			<!-- Begin MailChimp Signup Form -->
+			<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+			<style type="text/css">
+				#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+				/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+					 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+			</style>
+			<div id="mc_embed_signup">
+			<form action="//nodecamp.us13.list-manage.com/subscribe/post?u=d3fc067f6ba112a3b4873ef96&amp;id=53bdc6ce7f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<div id="mc_embed_signup_scroll">
+				<p>Subscribe to Node Camp mailing list</p>
+			<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+			<div class="mc-field-group">
+				<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+			</label>
+				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+			</div>
+			<div class="mc-field-group">
+				<label for="mce-FNAME">First Name </label>
+				<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+			</div>
+			<div class="mc-field-group">
+				<label for="mce-LNAME">Last Name </label>
+				<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+			</div>
+				<div id="mce-responses" class="clear">
+					<div class="response" id="mce-error-response" style="display:none"></div>
+					<div class="response" id="mce-success-response" style="display:none"></div>
+				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3fc067f6ba112a3b4873ef96_53bdc6ce7f" tabindex="-1" value=""></div>
+					<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					</div>
+			</form>
+			</div>
+			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+			<!--End mc_embed_signup-->
+
+    </div>
+
+	  <div id="community" class="block">
+	  	<h4 class="block-title">Other Community Events</h4>    
+      <p>Save the date for the <strong><a href="http://empirenode.org" target="_blank">Empire Node</a></strong> conference which is happening on Nov 18, 2016</p>
+      <p>Check out each of the <strong><a href="http://www.meetup.com/nodejs/" target="_blank">NYC Node JS</a></strong> and <strong><a href="http://www.meetup.com/nyc-node-js/" target="_blank">NYC Node.JS</a></strong> meetup!</p>
+     </div>
+   </div>
+
+  </div>
+
+
 </body>
 
 </html>
