--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <!-- place this in your head tag -->
+  <script src='https://js.tito.io/v1' async></script>
+  <link rel="stylesheet" type="text/css" href='https://css.tito.io/v1' />
 </head>
 
 <body>
@@ -33,8 +36,15 @@
 
 
   <div id="blocks">
+	  <div id="register" class="block">
+  		<h4 class="block-title">Node Camp Registration</h4>    
+      <p>Registration is now open, there is no charge for early bird tickets (but a $20 donation is suggested).</p>
+      <tito-widget event="node-camp/node-camp-2016"></tito-widget>
+    </div>
+
+
 	  <div id="newsletter" class="block">
-			<h4 class="block-title">Node Camp Newsletter</h4>    
+			<h4 class="block-title">Node Camp Updates</h4>    
 
 			<!-- Begin MailChimp Signup Form -->
 			<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
@@ -46,7 +56,7 @@
 			<div id="mc_embed_signup">
 			<form action="//nodecamp.us13.list-manage.com/subscribe/post?u=d3fc067f6ba112a3b4873ef96&amp;id=53bdc6ce7f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 					<div id="mc_embed_signup_scroll">
-				<p>Subscribe to Node Camp mailing list</p>
+				<p>Subscribe to Node Camp mailing list below for updates about the conference</p>
 			<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 			<div class="mc-field-group">
 				<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -77,7 +87,7 @@
 
 	  <div id="community" class="block">
 	  	<h4 class="block-title">Other Community Events</h4>    
-      <p>Save the date for the <strong><a href="http://empirenode.org" target="_blank">Empire Node</a></strong> conference which is happening on Nov 18, 2016</p>
+      <p>Save the date for the <strong><a href="http://empirenode.org" target="_blank">Empire Node</a></strong> conference which is happening in Fall 2016!!</p>
       <p>Check out each of the <strong><a href="http://www.meetup.com/nodejs/" target="_blank">NYC Node JS</a></strong> and <strong><a href="http://www.meetup.com/nyc-node-js/" target="_blank">NYC Node.JS</a></strong> meetup!</p>
      </div>
    </div>
