--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
  
 
   <div class="body">
-   <div>
-      <img src="images/logo.svg" id="logo">
+   <div class="logo">
+     <div id="logo">
+        <img src="images/logo.svg" id="logo">
+      </div>
     </div>
     <p class="name">Node Camp</p>
     <p class="date">Sat Jul 16, 2016 </p>
@@ -38,7 +40,7 @@
   <div id="blocks">
 	  <div id="register" class="block">
   		<h4 class="block-title">Node Camp Registration</h4>    
-      <p>Registration is now open, there is no charge for early bird tickets (but a $20 donation is suggested).</p>
+      <p>Registration is now open! There is no charge for early bird tickets, but we'll be encourage s suggested $20 donation (we'll be in touch).</p>
       <tito-widget event="node-camp/node-camp-2016"></tito-widget>
     </div>
 
