--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p class="venue">@ United Nations HQ</p>
     <p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
     <p class="updates strong">Please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a> if you have any questions or want to get involved.</p>
-    <p class="updates strong">If you want to present, please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a>.</p>
+    <h4 class="updates strong"><a href="http://goo.gl/forms/Fct2MTHMrF" target="_blank">Propose your presentation here: http://goo.gl/forms/Fct2MTHMrF</a>.</h4>
   </div>
 
 
