--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   		<h4 class="block-title">Node Camp Registration</h4>    
       <p>Registration is now open! There is no charge for early bird tickets, but we'll be encourage s suggested $20 donation (we'll be in touch).</p>
       <tito-widget event="node-camp/node-camp-2016"></tito-widget>
-      <p>You don't need to purchase an additional ticket for Node Camp if you've already purchased a ticket for another <a href="http://opencamps.org" target="_blank">Open Camps</a> event on the same day (other than WordCamp NYC or PyGotham which do require a separate ticket).</p>
+      <p>You don't need to make an additional ticket donation for Node Camp if you've already purchased a ticket for another <a href="http://opencamps.org" target="_blank">Open Camps</a> event on the same day (other than WordCamp NYC or PyGotham which do require a separate ticket).</p>
     </div>
 
 
