--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <title>Node Camp</title>
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/speakers.css">
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <!-- place this in your head tag -->
   <script src='https://js.tito.io/v1' async></script>
@@ -29,11 +31,55 @@
     </div>
     <p class="name">Node Camp</p>
     <p class="date">Sat Jul 16, 2016 </p>
+    <p class="date-time">9:30 am to 5:30 pm</p>
     <p class="venue">@ United Nations HQ</p>
     <p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
     <p class="updates strong">Please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a> if you have any questions or want to get involved.</p>
-    <h4 class="updates strong"><a href="http://goo.gl/forms/Fct2MTHMrF" target="_blank">Propose your presentation here: http://goo.gl/forms/Fct2MTHMrF</a>.</h4>
+    <p class="updates"><a href="http://goo.gl/forms/Fct2MTHMrF" class="button" target="_blank">Propose Your Session</a></h4>
   </div>
+
+
+		<div class="row speakers">
+			<div class="row inner">
+
+        <h2>Speakers</h2>
+
+				<div class="speaker node">
+  				<div class="photo">
+            <img src="images/speaker-sdavis.jpg">  
+          </div>
+          <div class="details">
+            <p class="speaker-name">Scott Davis</p>
+            <p class="org">eBay</p>
+            <p class="role">Lead Front End Engineer</p>
+            <div class="links">
+              <a href="https://twitter.com/scttdavs" class="twitter"  target="_blank"><i class="fa fa-twitter"></i></a>
+              <a href="https://github.com/scttdavs" class="github"><i class="fa fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/scttdavs" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+              <a href="http://sco.ttdavis.com/" class="website" target="_blank"><i class="fa fa-globe"></i></a>
+
+            </div>
+          </div>
+				</div>
+
+				<div class="speaker node">
+  				<div class="photo">
+            <img src="images/speaker-rdeknikker.jpg">  
+          </div>
+          <div class="details">
+            <p class="speaker-name">Remko de Knikker</p>
+            <p class="org">IBM</p>
+            <p class="role">Sr Software Engineer & Cloud Evangelist</p>
+            <div class="links">
+              <a href="https://twitter.com/remkohdev" class="twitter"  target="_blank"><i class="fa fa-twitter"></i></a>
+              <a href="https://github.com/remkohdev" class="github"><i class="fa fa-github"></i></a>
+              <a href="https://www.linkedin.com/in/remkohdev" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+              <a href="http://www.remkohde.com/c/dev/" class="website" target="_blank"><i class="fa fa-globe"></i></a>
+            </div>
+          </div>
+				</div>
+				
+		</div>
 
 
   <div id="blocks">
