--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <title>Node Camp</title>
 <head>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <link rel="stylesheet" type="text/css" href="css/speakers.css">
-
+<!--  Prod Styles --> 
+  <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/camps-styles.css">
+  <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/sessions.css">
+  <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/conferences-embed.css">
+  <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/conferences-colors.css">
+<!--  Dev Styles
+  <link rel="stylesheet" type="text/css" href="../OpenCamps/css/camps-styles.css">
+  <link rel="stylesheet" type="text/css" href="../OpenCamps/css/sessions.css">
+  <link rel="stylesheet" type="text/css" href="../OpenCamps/css/conferences-embed.css">
+  <link rel="stylesheet" type="text/css" href="../OpenCamps/css/conferences-colors.css">
+-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <!-- place this in your head tag -->
   <script src='https://js.tito.io/v1' async></script>
   <link rel="stylesheet" type="text/css" href='https://css.tito.io/v1' />
 </head>
 
-<body>
+<body class="conference node">
 
   <div class="header">
     <div class="icon-links">
@@ -22,7 +30,6 @@
  
   </div>
  
-
   <div class="body">
    <div class="logo">
      <div id="logo">
@@ -33,67 +40,18 @@
     <p class="date">Sat Jul 16, 2016 </p>
     <p class="date-time">9:30 am to 5:30 pm</p>
     <p class="venue">@ United Nations HQ</p>
-    <p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
-    <p class="updates strong">Please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a> if you have any questions or want to get involved.</p>
-    <p class="updates"><a href="http://goo.gl/forms/Fct2MTHMrF" class="button" target="_blank">Propose Your Session</a></h4>
   </div>
 
-
-		<div class="row speakers">
-			<div class="row inner">
-
-        <h2>Speakers</h2>
-
-				<div class="speaker node">
-  				<div class="photo">
-            <img src="images/speaker-sdavis.jpg">  
-          </div>
-          <div class="details">
-            <p class="speaker-name">Scott Davis</p>
-            <p class="org">eBay</p>
-            <p class="role">Lead Front End Engineer</p>
-            <div class="links">
-              <a href="https://twitter.com/scttdavs" class="twitter"  target="_blank"><i class="fa fa-twitter"></i></a>
-              <a href="https://github.com/scttdavs" class="github"><i class="fa fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/scttdavs" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
-              <a href="http://sco.ttdavis.com/" class="website" target="_blank"><i class="fa fa-globe"></i></a>
-
-            </div>
-          </div>
-				</div>
-
-				<div class="speaker node">
-  				<div class="photo">
-            <img src="images/speaker-rdeknikker.jpg">  
-          </div>
-          <div class="details">
-            <p class="speaker-name">Remko de Knikker</p>
-            <p class="org">IBM</p>
-            <p class="role">Sr Software Engineer & Cloud Evangelist</p>
-            <div class="links">
-              <a href="https://twitter.com/remkohdev" class="twitter"  target="_blank"><i class="fa fa-twitter"></i></a>
-              <a href="https://github.com/remkohdev" class="github"><i class="fa fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/remkohdev" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
-              <a href="http://www.remkohde.com/c/dev/" class="website" target="_blank"><i class="fa fa-globe"></i></a>
-            </div>
-          </div>
-				</div>
-
-				<div class="speaker node">
-  				<div class="photo">
-            <img src="images/speaker-hee.jpg">  
-          </div>
-          <div class="details">
-            <p class="speaker-name">Hyunho Ee</p>
-            <p class="org">Major League Baseball Advanced Media</p>
-            <p class="role">Software Engineer</p>
-            <div class="links">
-              <a href="https://github.com/e2tha-e" class="github"><i class="fa fa-github"></i></a>
-            </div>
-          </div>
-				</div>
-				
+	<div class="row white">
+		<div class="row inner">
+			<p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
+			<p class="updates strong">Please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a> if you have any questions or want to get involved.</p>
+			<p class="updates"><a href="http://goo.gl/forms/Fct2MTHMrF" class="button" target="_blank">Propose Your Session</a></h4>
 		</div>
+	</div>
+
+
+	<div id="sessions"></div>
 
 
   <div id="blocks">
@@ -155,6 +113,29 @@
    </div>
 
   </div>
+
+  <div id="opencamps-embed"></div>
+
+  <p class="coc"><a href="http://opencamps.org/code-of-conduct.html" target="_blank">Our Code of Conduct</a></p>
+
+
+
+<!-- JS Imports -->
+  <script src="js/jquery-2.2.1.min.js"></script>
+  <script src="http://opencamps.org/js/oc.js"></script>
+  <script src="js/getSessionsFilter.js"></script>
+<!-- Prod JS Imports -->
+  <script src="http://opencamps.org/js/getSessions.js"></script> 
+  <script src="http://opencamps.org/js/listSessions.js"></script> 
+  <script src="http://opencamps.org/js/getConferencesBlock.js"></script> 
+  <script src="http://opencamps.org/js/listConferences.js"></script>
+
+<!-- Dev JS Imports
+  <script src="../OpenCamps/js/getSessions.js"></script>
+  <script src="../OpenCamps/js/listSessions.js"></script>
+  <script src="../OpenCamps/js/getConferencesBlock.js"></script>
+  <script src="../OpenCamps/js/listConferences.js"></script>  
+-->
 
 
 </body>
