--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <html>
 <title>Node Camp</title>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
-<!--  Prod Styles --> 
+<!--  Prod Styles 
   <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/camps-styles.css">
   <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/sessions.css">
   <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/conferences-embed.css">
   <link rel="stylesheet" type="text/css" href="http://opencamps.org/css/conferences-colors.css">
-<!--  Dev Styles
+-->
+<!--  Dev Styles -->
   <link rel="stylesheet" type="text/css" href="../OpenCamps/css/camps-styles.css">
   <link rel="stylesheet" type="text/css" href="../OpenCamps/css/sessions.css">
   <link rel="stylesheet" type="text/css" href="../OpenCamps/css/conferences-embed.css">
   <link rel="stylesheet" type="text/css" href="../OpenCamps/css/conferences-colors.css">
--->
+
+  <link rel="stylesheet" type="text/css" href="css/camp-styles.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   <script src='https://js.tito.io/v1' async></script>
   <link rel="stylesheet" type="text/css" href='https://css.tito.io/v1' />
+
 </head>
 
 <body class="conference node">
@@ -42,7 +44,7 @@
     <p class="venue">@ United Nations HQ</p>
   </div>
 
-	<div class="row white">
+  <div id="intro" class="container light">
 		<div class="row inner">
 			<p class="updates">A community-run conference focused on the NodeJS javascript runtime </p>
 			<p class="updates strong">Please send us an email at <a href="mailto:info@nodecamp.io">info@nodecamp.io</a> if you have any questions or want to get involved.</p>
@@ -50,73 +52,85 @@
 		</div>
 	</div>
 
+	<div class="divider"></div>
 
-	<div id="sessions"></div>
+	<div id="sessions" class="container light"></div>
 
+  <div id="tickets" class="container color">
 
-  <div id="blocks">
-	  <div id="register" class="block">
-  		<h4 class="block-title">Node Camp Registration</h4>    
-      <p>Registration is now open! There is no charge for early bird tickets, but we'll be encourage s suggested $20 donation (we'll be in touch).</p>
-      <tito-widget event="node-camp/node-camp-2016"></tito-widget>
-      <p>You don't need to make an additional ticket donation for Node Camp if you've already purchased a ticket for another <a href="http://opencamps.org" target="_blank">Open Camps</a> event on the same day (other than WordCamp NYC or PyGotham which do require a separate ticket).</p>
-    </div>
-
-
-	  <div id="newsletter" class="block">
-			<h4 class="block-title">Node Camp Updates</h4>    
-
-			<!-- Begin MailChimp Signup Form -->
-			<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-			<style type="text/css">
-				#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
-				/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-					 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-			</style>
-			<div id="mc_embed_signup">
-			<form action="//nodecamp.us13.list-manage.com/subscribe/post?u=d3fc067f6ba112a3b4873ef96&amp;id=53bdc6ce7f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					<div id="mc_embed_signup_scroll">
-				<p>Subscribe to Node Camp mailing list below for updates about the conference</p>
-			<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-			<div class="mc-field-group">
-				<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-			</label>
-				<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+		<div id="blocks">
+			<div id="register" class="block">
+				<h4 class="block-title">Node Camp Registration</h4>    
+				<p>Registration is now open! There is no charge for early bird tickets, but we'll be encourage s suggested $20 donation (we'll be in touch).</p>
+				<tito-widget event="node-camp/node-camp-2016"></tito-widget>
+				<p>You don't need to make an additional ticket donation for Node Camp if you've already purchased a ticket for another <a href="http://opencamps.org" target="_blank">Open Camps</a> event on the same day (other than WordCamp NYC or PyGotham which do require a separate ticket).</p>
 			</div>
-			<div class="mc-field-group">
-				<label for="mce-FNAME">First Name </label>
-				<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+
+
+			<div id="newsletter" class="block">
+				<h4 class="block-title">Node Camp Updates</h4>    
+
+				<!-- Begin MailChimp Signup Form -->
+				<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+				<style type="text/css">
+					#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
+					/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+						 We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+				</style>
+				<div id="mc_embed_signup">
+				<form action="//nodecamp.us13.list-manage.com/subscribe/post?u=d3fc067f6ba112a3b4873ef96&amp;id=53bdc6ce7f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll">
+					<p>Subscribe to Node Camp mailing list below for updates about the conference</p>
+				<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+				<div class="mc-field-group">
+					<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+				</label>
+					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+				</div>
+				<div class="mc-field-group">
+					<label for="mce-FNAME">First Name </label>
+					<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+				</div>
+				<div class="mc-field-group">
+					<label for="mce-LNAME">Last Name </label>
+					<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+				</div>
+					<div id="mce-responses" class="clear">
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+					</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3fc067f6ba112a3b4873ef96_53bdc6ce7f" tabindex="-1" value=""></div>
+						<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						</div>
+				</form>
+				</div>
+				<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+				<!--End mc_embed_signup-->
+
 			</div>
-			<div class="mc-field-group">
-				<label for="mce-LNAME">Last Name </label>
-				<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+
+			<div id="community" class="block">
+				<h4 class="block-title">Other Community Events</h4>    
+				<p>Save the date for the <strong><a href="http://empirenode.org" target="_blank">Empire Node</a></strong> conference which is happening in Fall 2016!!</p>
+				<p>Check out each of the <strong><a href="http://www.meetup.com/nodejs/" target="_blank">NYC Node JS</a></strong> and <strong><a href="http://www.meetup.com/nyc-node-js/" target="_blank">NYC Node.JS</a></strong> meetup!</p>
+			 </div>
+		 </div>
+
+		</div>
+	</div>
+
+	<div id="venue" class="container light">
+	  <div id="map">
+				<iframe id="map_contact" width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.5977546776085!2d-73.97020314925929!3d40.74887577922652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2591ce0874d11%3A0xc5fae28bdd3df635!2sUnited+Nations+Headquarters!5e0!3m2!1sen!2sus!4v1461024642474" class="scrolloff">
+						<a href="https://www.google.com/maps/place/United+Nations+Headquarters/@40.7488758,-73.9702031,17z/data=!3m1!4b1!4m2!3m1!1s0x89c2591ce0874d11:0xc5fae28bdd3df635">	
+				</iframe>
 			</div>
-				<div id="mce-responses" class="clear">
-					<div class="response" id="mce-error-response" style="display:none"></div>
-					<div class="response" id="mce-success-response" style="display:none"></div>
-				</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3fc067f6ba112a3b4873ef96_53bdc6ce7f" tabindex="-1" value=""></div>
-					<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					</div>
-			</form>
-			</div>
-			<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-			<!--End mc_embed_signup-->
+	</div>
 
-    </div>
-
-	  <div id="community" class="block">
-	  	<h4 class="block-title">Other Community Events</h4>    
-      <p>Save the date for the <strong><a href="http://empirenode.org" target="_blank">Empire Node</a></strong> conference which is happening in Fall 2016!!</p>
-      <p>Check out each of the <strong><a href="http://www.meetup.com/nodejs/" target="_blank">NYC Node JS</a></strong> and <strong><a href="http://www.meetup.com/nyc-node-js/" target="_blank">NYC Node.JS</a></strong> meetup!</p>
-     </div>
-   </div>
-
-  </div>
-
-  <div id="opencamps-embed"></div>
 
   <p class="coc"><a href="http://opencamps.org/code-of-conduct.html" target="_blank">Our Code of Conduct</a></p>
+
+  <div id="opencamps-embed"></div>
 
 
 
@@ -124,18 +138,19 @@
   <script src="js/jquery-2.2.1.min.js"></script>
   <script src="http://opencamps.org/js/oc.js"></script>
   <script src="js/getSessionsFilter.js"></script>
-<!-- Prod JS Imports -->
+<!-- Prod JS Imports 
   <script src="http://opencamps.org/js/getSessions.js"></script> 
   <script src="http://opencamps.org/js/listSessions.js"></script> 
   <script src="http://opencamps.org/js/getConferencesBlock.js"></script> 
-  <script src="http://opencamps.org/js/listConferences.js"></script>
-
-<!-- Dev JS Imports
+  <script src="http://opencamps.org/js/listConferences.js"></script> 
+  <script src="http://opencamps.org/js/oc.js"></script>
+-->
+<!-- Dev JS Imports-->
   <script src="../OpenCamps/js/getSessions.js"></script>
   <script src="../OpenCamps/js/listSessions.js"></script>
   <script src="../OpenCamps/js/getConferencesBlock.js"></script>
   <script src="../OpenCamps/js/listConferences.js"></script>  
--->
+  <script src="../OpenCamps/js/oc.js"></script>
 
 
 </body>
